--- a/wazam/index.html
+++ b/wazam/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fake Shazam App</title>
+  <title>Wazam app</title>
   <style>
     * {
       box-sizing: border-box;
