--- a/wazam.html
+++ b/wazam.html
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-  <h1>Tap to Shazam</h1>
+  <h1>Tap to Wazam</h1>
 
   <button class="mic-button" onclick="startFakeSearch()" id="micBtn">
     <i>🎤</i>
