--- a/index.html
+++ b/index.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Work Duration Calculator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * {
       box-sizing: border-box;
     }
 
+    html[data-theme="dark"] {
+      --bg-color: #121212;
+      --card-bg: #1e1e1e;
+      --text-primary: #e2e8f0;
+      --text-secondary: #a0aec0;
+      --input-bg: #2d2d2d;
+      --input-border: #4a5568;
+      --result-bg: #2a4365;
+      --result-text: #90cdf4;
+      --shadow: rgba(0, 0, 0, 0.7);
+    }
+
+    html[data-theme="light"] {
+      --bg-color: #f0f4f8;
+      --card-bg: white;
+      --text-primary: #1a202c;
+      --text-secondary: #4a5568;
+      --input-bg: white;
+      --input-border: #cbd5e0;
+      --result-bg: #ebf8ff;
+      --result-text: #2b6cb0;
+      --shadow: rgba(0, 0, 0, 0.07);
+    }
+
     body {
       font-family: 'Inter', sans-serif;
-      background: #f0f4f8;
+      background: var(--bg-color);
       margin: 0;
       padding: 2rem;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      color: var(--text-primary);
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .card {
-      background: white;
+      background: var(--card-bg);
       border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.07);
+      box-shadow: 0 10px 25px var(--shadow);
       padding: 2rem;
       width: 100%;
       max-width: 400px;
+      transition: background-color 0.3s, box-shadow 0.3s;
     }
 
     h2 {
@@ -34,39 +61,62 @@
       margin-bottom: 1rem;
       font-weight: 600;
       font-size: 1.5rem;
-      color: #1a202c;
+      color: var(--text-primary);
     }
 
     label {
       display: block;
       margin-bottom: 0.5rem;
       font-weight: 500;
-      color: #4a5568;
+      color: var(--text-secondary);
     }
 
     input[type="time"] {
       width: 100%;
       padding: 0.6rem;
       border-radius: 8px;
-      border: 1px solid #cbd5e0;
+      border: 1px solid var(--input-border);
+      background-color: var(--input-bg);
+      color: var(--text-primary);
       font-size: 1rem;
       margin-bottom: 1.5rem;
+      transition: background-color 0.3s, border-color 0.3s, color 0.3s;
     }
 
     .info {
       font-size: 0.95rem;
-      color: #718096;
+      color: var(--text-secondary);
       margin-bottom: 1rem;
     }
 
     .result {
-      background: #ebf8ff;
-      color: #2b6cb0;
+      background: var(--result-bg);
+      color: var(--result-text);
       padding: 1rem;
       border-radius: 8px;
       font-size: 1.2rem;
       font-weight: 600;
       text-align: center;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .toggle-btn {
+      cursor: pointer;
+      background: none;
+      border: 2px solid var(--text-secondary);
+      border-radius: 20px;
+      padding: 0.3rem 1rem;
+      font-weight: 600;
+      color: var(--text-secondary);
+      margin-bottom: 1rem;
+      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+      user-select: none;
+    }
+
+    .toggle-btn:hover {
+      background-color: var(--text-secondary);
+      color: var(--card-bg);
+      border-color: var(--text-secondary);
     }
 
     @media (max-width: 480px) {
@@ -77,15 +127,16 @@
   </style>
 </head>
 <body>
-
   <div class="card">
+    <button class="toggle-btn" id="toggleTheme">Switch to Light Mode</button>
+
     <h2>Work Duration Calculator</h2>
 
     <label for="start">Start Time</label>
-    <input type="time" id="start" value="08:30">
+    <input type="time" id="start" value="08:30" />
 
     <div class="info">
-      End Time: <strong>Now</strong> (auto-updating every second)<br>
+      End Time: <strong>Now</strong> (auto-updating every second)<br />
       Lunch break: <strong>30 minutes</strong> deducted
     </div>
 
@@ -95,6 +146,8 @@
   <script>
     const startInput = document.getElementById("start");
     const result = document.getElementById("result");
+    const toggleBtn = document.getElementById("toggleTheme");
+    const htmlEl = document.documentElement;
 
     function updateDuration() {
       const startValue = startInput.value;
@@ -108,7 +161,7 @@
       const startTime = new Date();
       startTime.setHours(startHours, startMinutes, 0, 0);
 
-      let diffMs = now - startTime - (30 * 60 * 1000); // subtract 30 min lunch
+      let diffMs = now - startTime - 30 * 60 * 1000; // subtract 30 min lunch
 
       if (diffMs < 0) {
         result.textContent = "Start time is in the future. Please check.";
@@ -121,11 +174,20 @@
       result.textContent = `Worked: ${hours} hour(s) and ${minutes} minute(s)`;
     }
 
-    // Auto-update every second
+    function toggleTheme() {
+      if (htmlEl.getAttribute("data-theme") === "dark") {
+        htmlEl.setAttribute("data-theme", "light");
+        toggleBtn.textContent = "Switch to Dark Mode";
+      } else {
+        htmlEl.setAttribute("data-theme", "dark");
+        toggleBtn.textContent = "Switch to Light Mode";
+      }
+    }
+
+    toggleBtn.addEventListener("click", toggleTheme);
     setInterval(updateDuration, 1000);
     startInput.addEventListener("input", updateDuration);
     window.addEventListener("load", updateDuration);
   </script>
-
 </body>
 </html>
