--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     html[data-theme="dark"] {
       --bg-color: #121212;
-      --card-bg: #1e1e1e;
+      --card-bg: rgba(30, 30, 30, 0.9);
       --text-primary: #e2e8f0;
       --text-secondary: #a0aec0;
       --input-bg: #2d2d2d;
@@ -35,7 +35,8 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: var(--bg-color);
+      background: var(--bg-color) url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
       margin: 0;
       padding: 2rem;
       display: flex;
@@ -54,6 +55,7 @@
       width: 100%;
       max-width: 400px;
       transition: background-color 0.3s, box-shadow 0.3s;
+      backdrop-filter: blur(6px);
     }
 
     h2 {
